--- a/spark_1.yml
+++ b/spark_1.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   spark-master:
-    image: docker.io/bitnami/spark:3.4
+    image: docker.io/bitnami/spark:3.4.1
     container_name: sp_master
     network_mode: "host"
     volumes:
@@ -13,7 +13,7 @@ services:
        - /etc/group:/etc/group
     environment:
       - SPARK_MODE=master
-      - SPARK_MASTER_HOST=192.168.11.106
+      - SPARK_MASTER_HOST=192.168.11.102
       - SPARK_MASTER_PORT=7077
       - SPARK_MASTER_WEBUI_PORT=8080
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
@@ -21,21 +21,21 @@ services:
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
       - SPARK_USER=spark
-  spark-worker-a:
-    image: docker.io/bitnami/spark:3.4
-    container_name: sp_work_a
+  spark-worker-10:
+    image: docker.io/bitnami/spark:3.4.1
+    container_name: work_10
     network_mode: "host"
     depends_on:
       - spark-master
     environment:
       - SPARK_MODE=worker
-      - SPARK_MASTER_HOST=192.168.11.106
+      - SPARK_MASTER_HOST=192.168.11.102
       - SPARK_MASTER_PORT=7077
       - SPARK_MASTER_WEBUI_PORT=8080
-      - SPARK_MASTER_URL=spark://192.168.11.106:7077
+      - SPARK_MASTER_URL=spark://192.168.11.102:7077
       - SPARK_WORKER_WEBUI_PORT=8081
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_WORKER_CORES=1
+      - SPARK_WORKER_MEMORY=4G
+      - SPARK_WORKER_CORES=3
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
@@ -48,21 +48,21 @@ services:
        - /etc/localtime:/etc/localtime 
        - /etc/passwd:/etc/passwd 
        - /etc/group:/etc/group
-  spark-worker-b:
-    image: docker.io/bitnami/spark:3.4
-    container_name: sp_work_b
+  spark-worker-11:
+    image: docker.io/bitnami/spark:3.4.1
+    container_name: work_11
     network_mode: "host"
     depends_on:
       - spark-master
     environment:
       - SPARK_MODE=worker
-      - SPARK_MASTER_HOST=192.168.11.106
+      - SPARK_MASTER_HOST=192.168.11.102
       - SPARK_MASTER_PORT=7077
       - SPARK_MASTER_WEBUI_PORT=8080
-      - SPARK_MASTER_URL=spark://192.168.11.106:7077
+      - SPARK_MASTER_URL=spark://192.168.11.102:7077
       - SPARK_WORKER_WEBUI_PORT=8082
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_WORKER_CORES=1
+      - SPARK_WORKER_MEMORY=4G
+      - SPARK_WORKER_CORES=3
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
@@ -75,3 +75,33 @@ services:
        - /etc/localtime:/etc/localtime 
        - /etc/passwd:/etc/passwd 
        - /etc/group:/etc/group
+       - /home/thomas:/home/thomas
+  spark-worker-12:
+    image: docker.io/bitnami/spark:3.4.1
+    container_name: work_12
+    network_mode: "host"
+    depends_on:
+      - spark-master
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_HOST=192.168.11.102
+      - SPARK_MASTER_PORT=7077
+      - SPARK_MASTER_WEBUI_PORT=8080
+      - SPARK_MASTER_URL=spark://192.168.11.102:7077
+      - SPARK_WORKER_WEBUI_PORT=8083
+      - SPARK_WORKER_MEMORY=4G
+      - SPARK_WORKER_CORES=3
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
+    volumes:
+       - ./apps:/opt/spark-apps
+       - ./data:/opt/spark-data
+       - /etc/timezone:/etc/timezone 
+       - /etc/localtime:/etc/localtime 
+       - /etc/passwd:/etc/passwd 
+       - /etc/group:/etc/group
+       - /home/thomas:/home/thomas
+
